# imu_serial_node

./: CMakeLists.txt  README.md  package.xml
launch/: demo.launch
src/: mpu6050_serial_to_imu_node.cpp
